Removed deprecated code